# read-file

./: Dockerfile  README.md  pyproject.toml
read_cli/: main.py
src/read/: __init__.py  read.py
